AA-2002-08-01-1  L10N:      Yun's bug list, XtResolvePathname fix in Lookup.c
                            l10n fixes, sge_ca script

CR-2002-07-31-1  Bugfix:    English messages show up when running install 
                            in localized environment (fix for "fr" Solaris 8
                            and 9)   
                 Bugtraq:   #4719203
                 Changed:   all binaries


CR-2002-07-31-0  Bugfix:    addend missing #ifdef __SGE_NO_USERMAPPING__ 
                            lines to preserve sge_options[] array
                 Changed:   qconf          

AH-2002-07-29-1  Doc:       Describe the 'all' keyword for queue_list in
                            sge_pe(5) and checkpoint(5).
                 Issue:     #319
                 Doc:       Describe qconf -mqattr switch as the deprecated
                            form of the -rattr and not of the -mattr switch.
                            Mention that ?attr switch familiy operates also
                            on PE and ckpt objects.
                 Issue:     #321

CR-2002-07-29-1: Bugfix:    corrected CR-2002-07-29-0 and added sc_OPT
                            for qalter binary

CR-2002-07-29-0: Bugfix:    CLI: invalid option "-jid jid" for qconf in 
                            qconf -help
                 Bugtraq:   #4722060
                 Changed:   qalter, qconf, qsh, qrsh, qlogin, qsub

CR-2002-07-26-1: Bugfix:    Wrong path for qmaster messages file in exe host 
                            installation
                 Bugtraq:   #4721181    
 
CR-2002-07-26-0: Bugfix:    Junk messages in installation
                 Bugtraq:   #4705066 (refix)

CR-2002-07-25-2: Merge:     Added some sge_ca options from maintrunc 

CR-2002-07-25-1: I18N:      English messages show up when running install 
                            in localized environment    
                 Bugtraq:   #4719203
                 Changed:   all binaries
