@@ -1,3 +1,9 @@
+EB-2002-08-07-0  Bugfix:    maxujobs prevents dispatching even if job limit is
+                            not reached
+                 Issue:     #345
+                 Bugtraq:   #4727515
+                 Changed:   sge_schedd
+
 AA-2002-08-01-1  L10N:      Yun's bug list, XtResolvePathname fix in Lookup.c
                             l10n fixes, sge_ca script
 
